--- a/RepackingProject/templates/repacking/records.html
+++ b/RepackingProject/templates/repacking/records.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{#{% load cache %}#}
 
 {% load static %}
 
@@ -29,7 +30,6 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href="{% static 'assets/css/repacking-records.css' %}" type="text/css">
-<script src="{% static 'assets/js/repacking-records.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -98,7 +98,10 @@
                 {% csrf_token %}
                 <button class="btn" id="processBtn" type="submit">Обработать выбранные</button>
               </form>
-
+              <form id="terminateIDForm" method="POST" action="{% url 'repacking-api-terminate-records' %}">
+                {% csrf_token %}
+                <button class="btn terminate-btn" id="terminateBtn" type="submit">Завершить</button>
+              </form>
               <button class="btn ghost" id="selectAllBtn">Выбрать всё</button>
               <button class="btn ghost" id="deselectAllBtn">Снять выделение</button>
             </div>
@@ -377,57 +380,6 @@
     }
 
 
-    document.getElementById('processIDForm').addEventListener('submit', e => {
-      e.preventDefault();
-
-      const form = e.target;
-      const formData = new FormData(form);
-      loadingSpinner1.style.display = 'block';
-
-      const recording_ids = [];
-      const chosen = visibleRecords.filter(r => {
-            return selectedIds.has(r.id) && (parseInt(r.status) == 1 || parseInt(r.status) == 6);
-      });
-
-      Array.from(chosen).forEach(item => {
-        recording_ids.push(item.id);
-      });
-
-      formData.set("recording_ids", recording_ids);
-
-      if (!recording_ids.length) {
-          showAlert('Обработка', 'Не выбраны записи для обработки (выбирайте со статусами "Не обработана", "Неудачно").', 'warning');
-          loadingSpinner1.style.display = 'none';
-          return;
-      }
-
-      fetch(form.action, {
-        method: form.method,
-        body: formData,
-      }).then(response => response.json())
-      .then(response => {
-        if (!response.success) {
-          loadingSpinner1.style.display = 'none';
-          return
-        }
-        loadingSpinner1.style.display = 'none';
-        showAlert('Успешно', 'Запись успешно поставлена в очередь на обработку.', 'success');
-        /*Array.from(response.recording_ids).forEach(item => {
-          visibleRecords.forEach(r => selectedIds.delete(item));
-        });*/
-
-        selectedIds.clear();
-        renderRecords();
-        updateSelectedCount();
-      })
-      .catch(error => {
-          loadingSpinner1.style.display = 'none';
-          showAlert('Ошибка', 'Произошла ошибка попробуйте позже.', 'error');
-          console.log('Error:', error);
-      });
-    });
-
-
   </script>
-
+  <script src="{% static 'assets/js/repacking-records.js' %}"></script>
 {% endblock %}
