added certain time_zone string to record template, disabled upload chunking, added convert timezone to localtimezone into repack ffmpeg task

--- a/RepackingProject/templates/base.html
+++ b/RepackingProject/templates/base.html
@@ -75,6 +75,7 @@
     {% include "footer.html" %}
 
     <script>
+        var tzString = "{{tz_string}}";
         var activePage = "{{request.resolver_match.url_name}}";
 
         const themeToggle = document.getElementById('themeToggle');
