--- a/RepackingProject/templates/repacking/records.html
+++ b/RepackingProject/templates/repacking/records.html
@@ -29,6 +29,7 @@
 
 
 {% block stylesheet %}
+<link rel="stylesheet" href="{% static 'assets/css/repacking.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'assets/css/repacking-records.css' %}" type="text/css">
 {% endblock %}
 
