--- a/RepackingProject/templates/404.html
+++ b/RepackingProject/templates/404.html
@@ -11,7 +11,9 @@
 {% endblock %}
 
 {% block header %}
-{% include "header.html" %}
+{% if not user.is_authenticated %}
+    {% include "header.html" %}
+{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -24,7 +26,5 @@
         <h2>we are sorry, but the page you requested was not found</h2>
     </div>
 </div>
-
-
 {% endblock %}
 
