added the notify template to send on email by email

--- a/RepackingProject/templates/repacking/downloads.html
+++ b/RepackingProject/templates/repacking/downloads.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}Ссылки для скачивания — {{ website_name }}{% endblock %}
+
 {% block stylesheet %}
 <link rel="stylesheet" href="{% static 'assets/css/repacking.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'assets/css/repacking-downloads.css' %}" type="text/css">
