--- a/RepackingProject/templates/account/login-2fa.html
+++ b/RepackingProject/templates/account/login-2fa.html
@@ -54,7 +54,7 @@
         <button type="submit" class="btn">Подтвердить</button>
       </form>
 
-      <a href="{% url 'register' %}" class="link">Нет аккаунта? Зарегистрироваться</a>
+      <a href="{% url 'login' %}" class="link">Вернуться на страницу входа</a>
       <a href="{% url 'forgot-password' %}" class="link link-forgot-password">Забыли пароль?</a>
     </div>
   </div>
