--- a/RepackingProject/templates/base.html
+++ b/RepackingProject/templates/base.html
@@ -2,7 +2,6 @@
 {% load i18n %}
 {% load custom_filters %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,8 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--    <link rel="icon" href="{% static 'favicon_2.ico' %}" type="image/x-icon">-->
-<!--    <link rel="shortcut icon" type="image/png" href="{% static 'favicon_1.png' %}"/>-->
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="{% static 'assets/logo/icon.png' %}"/>
 
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/styles.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/header.css' %}">
