--- a/RepackingProject/templates/mail/base-mail.html
+++ b/RepackingProject/templates/mail/base-mail.html
@@ -30,7 +30,7 @@
                 <tr>
 
                   <td style="vertical-align:middle;">
-                    <img src="{{ schema }}://{{ domain }}{{ port }}{% static 'assets/logo/logo.png' %}" alt="{{website_name}} logo" width="45" height="35" style="display:inline-block;border-radius:6px;vertical-align:middle;">
+                    <img src="{{ logo }}" alt="{{website_name}} logo" width="45" height="35" style="display:inline-block;border-radius:6px;vertical-align:middle;">
                     <span style="margin-left:12px;font-weight:700;font-size:18px;vertical-align:middle;display:inline-block;">{{website_name}}</span>
                   </td>
 
